@@ -11,6 +11,7 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.util.AntPathMatcher;
@@ -18,7 +19,10 @@ import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.util.Collections;
+import java.util.List;
 import java.util.Map;
+
+import static com.algomeet.authservice.enums.ResponseCode.AUTH_SESSION_REVOKED;
 
 @Slf4j
 @RequiredArgsConstructor
@@ -41,7 +45,7 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
                 || "OPTIONS".equalsIgnoreCase(request.getMethod());
     }
 
-    @Override
+	@Override
     protected void doFilterInternal(HttpServletRequest request,
                                     HttpServletResponse response,
                                     FilterChain chain)
@@ -64,7 +68,9 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
             try {
                 // 2a) Validate JWT
                 if (!jwtUtil.isTokenValid(token)) {
+
                     unauthorized(response); // or AUTH_LOGIN_FAILED if you prefer
+
                     return;
                 }
 
@@ -72,9 +78,12 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
                 String email = jwtUtil.extractEmail(token);
                 String tokenSid = jwtUtil.extractSid(token);
                 String userKey = jwtUtil.extractUserKey(token);
+                String role = jwtUtil.extractRole(token);
 
                 if (email == null || tokenSid == null) {
+
                     unauthorized(response);
+
                     return;
                 }
 
@@ -88,7 +97,18 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
                 }
 
                 // 2d) All good → set Authentication (principal=email)
-                var auth = new UsernamePasswordAuthenticationToken(email, null, Collections.emptyList());
+                List<GrantedAuthority> authorities = Collections.emptyList();
+                if (role != null) {                	
+                	authorities = List.of(new GrantedAuthority () {
+            			@Override
+            			public String getAuthority() {
+            				return role;
+            			}
+            		});
+                }
+                        
+                @SuppressWarnings("serial")
+				var auth = new UsernamePasswordAuthenticationToken(email, null, authorities);
                 auth.setDetails(Map.of(
                         "user_key", userKey,
                         "sid", tokenSid));
@@ -96,7 +116,9 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
             } catch (Exception ex) {
                 log.error("JWT filter error: {}", ex.toString());
+
                 unauthorized(response);
+
                 return;
             }
         }
